# df-data-quality

./: .env.aws_ec2_container  .env.aws_ec2_native  .env.aws_ecs_container  .env.on_prem_vm_native  .gitignore  Dockerfile  Makefile  README.md  app_config.dev.yaml  app_env.aws_ec2_native.dev.env  app_env.aws_ecs_container.dev.env  app_env.on_prem_vm_native.dev.env  aws_ec2_container.env  aws_ec2_native.env  aws_ecs_container.env  dataset.py  dq_app.py  dq_app_core.py  dq_expectation.py  dq_rule.py  pyproject.toml  requirements.txt  settings.py  setup.py
.devcontainer/: devcontainer.json
cfg/: api_log.ini  config_dev.yaml
data/: test_data2.csv
dq_app/: __main__.py  dataset.py  dq_app_api.py  dq_app_cli.py  dq_app_core.py  dq_app_old.py  dq_expectation.py  settings.py
dq_app/api_data/: datasets.json  dq_expectations.json  dq_rules.json
dq_app/cfg/: api_log.ini  config_dev.yaml  dq_app_api_log.ini
dq_app/tests/: test_dq_app.py  test_dq_app_core.py  test_dq_rule.py
dq_app/utils/: file_io.py  logger.py
scripts/: dq_app
src/dq_app/: dq_app_api.py  dq_app_cli.py  dq_app_core.py  settings.py
tests/: test_dq_app.py  test_dq_app_core.py  test_dq_rule.py
utils/: file_io.py
